changed footer style and fixed alignment on the sponsor page

--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@
 }
 
 #letter{
-  text-align: left;
+  text-align: justify;
   margin: 0px;
   color: #fff
 }
@@ -108,6 +108,16 @@ h1{
 p{
   font-family: 'Raleway', Helvetica, Arial, sans-serif;
   text-align: justify;
+  padding-left: 25%;
+  padding-right: 25%;
+  font-size: 1.1em;
+  line-height: 1.3em;
+  max-width: 70%;
+}
+
+p2{
+  font-family: 'Raleway', Helvetica, Arial, sans-serif;
+  text-align: center;
   padding-left: 25%;
   padding-right: 25%;
   font-size: 1.1em;
